--- a/geometry-dash/index.html
+++ b/geometry-dash/index.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Geometry Dash Unblocked</title>
-    <meta name="description" content="Jump, fly, and flip in Geometry Dash Unblocked. This rhythm-based action platformer is a true test of skill and timing. Dodge obstacles and beat impossible levels!">
+    <title>Geometry Dash Unblocked | Unblocked Games on GitHub.io</title>
+    <meta name="description" content="Play Geometry Dash Unblocked for free at FAF Games and GitHub.io. Jump, fly, and flip your way through challenging levels in this fast-paced rhythm-based platformer no downloads needed!">
     <meta name="keywords" content="geometry dash, geometry dash unblocked, platformer game, action game, skill game, rhythm game, free online game">
-    <link rel="canonical" href="https://onlyszgames.github.io/geometry-dash" />
+    <link rel="canonical" href="https://fafgamess.github.io/geometry-dash" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only Sz Games">
-    <meta property="og:title" content="Geometry Dash Unblocked" />
-    <meta property="og:description" content="Jump, fly, and flip in Geometry Dash Unblocked. This rhythm-based action platformer is a true test of skill and timing. Dodge obstacles and beat impossible levels!" />
-    <meta property="og:url" content="https://onlyszgames.github.io/geometry-dash" />
-    <meta property="og:image" content="https://onlyszgames.github.io/img/geometry-dash.png" />
+    <meta name="author" content="FAF Games">
+    <meta property="og:title" content="Geometry Dash Unblocked | Unblocked Games on GitHub.io" />
+    <meta property="og:description" content="Play Geometry Dash Unblocked for free at FAF Games and GitHub.io. Jump, fly, and flip your way through challenging levels in this fast-paced rhythm-based platformer no downloads needed!" />
+    <meta property="og:url" content="https://fafgamess.github.io/geometry-dash" />
+    <meta property="og:image" content="https://fafgamess.github.io/img/geometry-dash.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Only Sz Games" />
+    <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@SZGames">
-    <meta name="twitter:title" content="Geometry Dash Unblocked">
-    <meta name="twitter:description" content="Jump, fly, and flip in Geometry Dash Unblocked. This rhythm-based action platformer is a true test of skill and timing. Dodge obstacles and beat impossible levels!">
-    <meta name="twitter:image" content="https://onlyszgames.github.io/img/geometry-dash.png">
+    <meta name="twitter:site" content="@FAFGames">
+    <meta name="twitter:title" content="Geometry Dash Unblocked | Unblocked Games on GitHub.io">
+    <meta name="twitter:description" content="Play Geometry Dash Unblocked for free at FAF Games and GitHub.io. Jump, fly, and flip your way through challenging levels in this fast-paced rhythm-based platformer no downloads needed!">
+    <meta name="twitter:image" content="https://fafgamess.github.io/img/geometry-dash.png">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script type="application/ld+json">
   {
         "@context": "https://schema.org",
         "@type": "Game",
         "name": "Geometry Dash Rhythm-Based Challenge",
-        "url": "https://onlyszgames.github.io/geometry-dash",
-        "description": "Jump, fly, and flip in Geometry Dash Unblocked. This rhythm-based action platformer is a true test of skill and timing. Dodge obstacles and beat impossible levels!",
+        "url": "https://fafgamess.github.io/geometry-dash",
+        "description": "Play Geometry Dash Unblocked for free at FAF Games and GitHub.io. Jump, fly, and flip your way through challenging levels in this fast-paced rhythm-based platformer no downloads needed!",
         "genre": "Platformer",
         "applicationCategory": "Game",
         "operatingSystem": "Web Browser",
@@ -43,7 +43,7 @@
             "bestRating": "5",
             "worstRating": "1"
         },
-        "image": "https://onlyszgames.github.io/img/geometry-dash.png"
+        "image": "https://fafgamess.github.io/img/geometry-dash.png"
    }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
@@ -392,7 +392,7 @@ justify-content: center;}
     <header>
        <div class="container header-content">
             <a href="/" class="logo">
-                Only Sz Games
+                FAF Games
             </a>
             <nav class="main-nav">
                 <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -456,7 +456,7 @@ justify-content: center;}
 
         <div class="game-container">
             <div class="game-frame-container" id="gameFrameContainer">
-                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://onlyszgames.github.io/img/geometry-dash.png');"></div>
+                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://fafgamess.github.io/img/geometry-dash.png');"></div>
                 <div class="game-overlay" id="gameOverlay">
                   <button class="play-button" id="playButton">▶</button>
                     <div class="play-text">Play Geometry Dash Rhythm-Based Challenge</div>
@@ -469,7 +469,7 @@ justify-content: center;}
         </div>
 
         <div class="game-description">
-            <img src="https://onlyszgames.github.io/img/geometry-dash.png" alt="Geometry Dash Rhythm-Based Challenge
+            <img src="https://fafgamess.github.io/img/geometry-dash.png" alt="Geometry Dash Rhythm-Based Challenge
 Gameplay" class="game-description-image" title="Geometry Dash Rhythm-Based Challenge">
             <h2>About Geometry Dash 🟨</h2><p>Geometry Dash is a notoriously difficult but incredibly rewarding skill-based game. It blends the mechanics of a platformer with the beat of a rhythm game. Each level is a high-speed obstacle course where a single mistake sends you back to the very beginning. The game is all about muscle memory, pattern recognition, and persistence. This Geometry Dash Unblocked version brings the full, pulse-pounding experience to your browser. Beating a level is one of the most satisfying feelings in gaming.</p><h2>Game Features Geometry Dash 🎶</h2><p>The game's defining feature is its synchronization of gameplay to music. The jumps and obstacles are timed perfectly to the beat, which helps you learn the patterns. Geometry Dash Unblocked includes the official levels, each with its own unique song and increasing difficulty. The game also features different 'modes' that change your controls, such as a 'ship' mode where you fly and a 'UFO' mode where you tap to hop in mid-air. The 'practice mode' allows you to place checkpoints, which is essential for learning complex levels.</p><h3>Tips for Beginners</h3><ul><li>Use 'Practice Mode' extensively to learn the level.</li><li>Try to feel the rhythm of the music; it tells you when to jump.</li><li>Do not give up. This game is <em>meant</em> to be hard.</li><li>Focus on one section at a time.</li></ul><h2>How to Play Geometry Dash 🎮</h2><p>The controls are simple: Click the mouse, press the Spacebar, or use the Up Arrow to make your character jump. That is it. Your square (or ship, or other form) moves automatically. Your goal is to reach the end of the level without hitting any obstacles. If you crash, you restart from the beginning. In 'ship' mode, holding the button makes you fly up, and releasing it makes you fall down. Master this simple control to overcome the game's brutal and brilliant level design.</p>
             <div class="game-features">
@@ -527,7 +527,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/archer-master-3d-castle-defense" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/archer-master-3d-castle-defense.png" alt="Archer Master 3D Castle Defense A TD Shooter">
+                                <img src="https://fafgamess.github.io/img/archer-master-3d-castle-defense.png" alt="Archer Master 3D Castle Defense A TD Shooter">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Archer Master 3D Castle Defense A TD Shooter</h3>
@@ -538,7 +538,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/duck-life-3-evolution" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/duck-life-3-evolution.png" alt="Duck Life 3 Evolution A Training Simulation">
+                                <img src="https://fafgamess.github.io/img/duck-life-3-evolution.png" alt="Duck Life 3 Evolution A Training Simulation">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Duck Life 3 Evolution A Training Simulation</h3>
@@ -549,7 +549,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/highway-bike-simulator" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/highway-bike-simulator.png" alt="Highway Bike Simulator Realistic Ride">
+                                <img src="https://fafgamess.github.io/img/highway-bike-simulator.png" alt="Highway Bike Simulator Realistic Ride">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Highway Bike Simulator Realistic Ride</h3>
@@ -560,7 +560,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/swingo" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/swingo.png" alt="Swingo Puzzles A Test of Timing and Skill">
+                                <img src="https://fafgamess.github.io/img/swingo.png" alt="Swingo Puzzles A Test of Timing and Skill">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Swingo Puzzles A Test of Timing and Skill</h3>
@@ -571,7 +571,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/archery-world-tour" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/archery-world-tour.png" alt="Archery World Tour A Realistic 3D Shooter">
+                                <img src="https://fafgamess.github.io/img/archery-world-tour.png" alt="Archery World Tour A Realistic 3D Shooter">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Archery World Tour A Realistic 3D Shooter</h3>
@@ -582,7 +582,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/cyber-cars-punk-racing" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/cyber-cars-punk-racing.png" alt="Cyber Cars Punk Racing 2 Player">
+                                <img src="https://fafgamess.github.io/img/cyber-cars-punk-racing.png" alt="Cyber Cars Punk Racing 2 Player">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Cyber Cars Punk Racing 2 Player</h3>
@@ -593,7 +593,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/fury-wars" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/fury-wars.png" alt="Fury Wars A Wild Online Team Shooter">
+                                <img src="https://fafgamess.github.io/img/fury-wars.png" alt="Fury Wars A Wild Online Team Shooter">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Fury Wars A Wild Online Team Shooter</h3>
@@ -604,7 +604,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/draw-the-hill" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/draw-the-hill.png" alt="Draw The Hill Creative Driving">
+                                <img src="https://fafgamess.github.io/img/draw-the-hill.png" alt="Draw The Hill Creative Driving">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Draw The Hill Creative Driving</h3>
@@ -615,7 +615,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/vex-6" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/vex-6.png" alt="Vex 6 The Newest Challenge">
+                                <img src="https://fafgamess.github.io/img/vex-6.png" alt="Vex 6 The Newest Challenge">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Vex 6 The Newest Challenge</h3>
@@ -626,7 +626,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/bullet-bros" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/bullet-bros.png" alt="Bullet Bros Puzzle Shooter">
+                                <img src="https://fafgamess.github.io/img/bullet-bros.png" alt="Bullet Bros Puzzle Shooter">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Bullet Bros Puzzle Shooter</h3>
@@ -637,7 +637,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/super-bike-the-champion" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/super-bike-the-champion.png" alt="Super Bike The Champion Your Ultimate Moto Race">
+                                <img src="https://fafgamess.github.io/img/super-bike-the-champion.png" alt="Super Bike The Champion Your Ultimate Moto Race">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Super Bike The Champion Your Ultimate Moto Race</h3>
@@ -648,7 +648,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/marble-dash" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/marble-dash.png" alt="Marble Dash Puzzle Shooter">
+                                <img src="https://fafgamess.github.io/img/marble-dash.png" alt="Marble Dash Puzzle Shooter">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Marble Dash Puzzle Shooter</h3>
@@ -705,8 +705,8 @@ class="category-tag-item" style="background-color: #FF3D00;">
         <div class="container">
    <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Only Sz Games</h3>
-                    <p>Looking for your favorite Only Sz Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
+                    <h3>FAF Games</h3>
+                    <p>Looking for your favorite FAF Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
                     <div class="social-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -718,7 +718,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
 
             <div class="footer-bottom">
                 <p>&copy;
-<span id="currentYear"></span> Only Sz Games. All rights reserved.</p>
+<span id="currentYear"></span> FAF Games. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="/privacy-policy">Privacy Policy</a>
                     <a href="/contact">Contact Us</a>
