--- a/traffic-rider/index.html
+++ b/traffic-rider/index.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Traffic Rider Unblocked</title>
-    <meta name="description" content="Traffic Rider Unblocked takes motorcycle racing to the next level. Ride in first-person view, weave through highway traffic, and complete career missions.">
+    <title>Traffic Rider Unblocked | Unblocked Games on GitHub.io</title>
+    <meta name="description" content="Play Traffic Rider Unblocked online for free at FAF Games and GitHub.io. Experience high-speed motorcycle racing with realistic graphics, endless roads, and thrilling challenges no download required!">
     <meta name="keywords" content="traffic rider, traffic rider unblocked, motorcycle game, racing game, simulation, driving game, 3d game">
-    <link rel="canonical" href="https://onlyszgames.github.io/traffic-rider" />
+    <link rel="canonical" href="https://fafgamess.github.io/traffic-rider" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only Sz Games">
-    <meta property="og:title" content="Traffic Rider Unblocked" />
-    <meta property="og:description" content="Traffic Rider Unblocked takes motorcycle racing to the next level. Ride in first-person view, weave through highway traffic, and complete career missions." />
-    <meta property="og:url" content="https://onlyszgames.github.io/traffic-rider" />
-    <meta property="og:image" content="https://onlyszgames.github.io/img/traffic-rider.png" />
+    <meta name="author" content="FAF Games">
+    <meta property="og:title" content="Traffic Rider Unblocked | Unblocked Games on GitHub.io" />
+    <meta property="og:description" content="Play Traffic Rider Unblocked online for free at FAF Games and GitHub.io. Experience high-speed motorcycle racing with realistic graphics, endless roads, and thrilling challenges no download required!" />
+    <meta property="og:url" content="https://fafgamess.github.io/traffic-rider" />
+    <meta property="og:image" content="https://fafgamess.github.io/img/traffic-rider.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Only Sz Games" />
+    <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
-    <meta name="twitter:title" content="Traffic Rider Unblocked">
-    <meta name="twitter:description" content="Traffic Rider Unblocked takes motorcycle racing to the next level. Ride in first-person view, weave through highway traffic, and complete career missions.">
-    <meta name="twitter:image" content="https://onlyszgames.github.io/img/traffic-rider.png">
+    <meta name="twitter:title" content="Traffic Rider Unblocked | Unblocked Games on GitHub.io">
+    <meta name="twitter:description" content="Play Traffic Rider Unblocked online for free at FAF Games and GitHub.io. Experience high-speed motorcycle racing with realistic graphics, endless roads, and thrilling challenges no download required!">
+    <meta name="twitter:image" content="https://fafgamess.github.io/img/traffic-rider.png">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script type="application/ld+json">
   {
         "@context": "https://schema.org",
         "@type": "Game",
         "name": "Traffic Rider",
-        "url": "https://onlyszgames.github.io/traffic-rider",
-        "description": "Traffic Rider Unblocked takes motorcycle racing to the next level. Ride in first-person view, weave through highway traffic, and complete career missions.",
+        "url": "https://fafgamess.github.io/traffic-rider",
+        "description": "Play Traffic Rider Unblocked online for free at FAF Games and GitHub.io. Experience high-speed motorcycle racing with realistic graphics, endless roads, and thrilling challenges no download required! ",
         "genre": "Driving",
         "applicationCategory": "Game",
         "operatingSystem": "Web Browser",
@@ -43,7 +43,7 @@
             "bestRating": "5",
             "worstRating": "1"
         },
-        "image": "https://onlyszgames.github.io/img/traffic-rider.png"
+        "image": "https://fafgamess.github.io/img/traffic-rider.png"
    }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
@@ -392,7 +392,7 @@ justify-content: center;}
     <header>
        <div class="container header-content">
             <a href="/" class="logo">
-                Only Sz Games
+                FAF Games
             </a>
             <nav class="main-nav">
                 <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -453,7 +453,7 @@ justify-content: center;}
 
         <div class="game-container">
             <div class="game-frame-container" id="gameFrameContainer">
-                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://onlyszgames.github.io/img/traffic-rider.png');"></div>
+                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://fafgamess.github.io/img/traffic-rider.png');"></div>
                 <div class="game-overlay" id="gameOverlay">
                   <button class="play-button" id="playButton">▶</button>
                     <div class="play-text">Play Traffic Rider</div>
@@ -466,7 +466,7 @@ justify-content: center;}
         </div>
 
         <div class="game-description">
-            <img src="https://onlyszgames.github.io/img/traffic-rider.png" alt="Traffic Rider
+            <img src="https://fafgamess.github.io/img/traffic-rider.png" alt="Traffic Rider
 Gameplay" class="game-description-image" title="Traffic Rider">
             <h2>🏍️ About Traffic Rider</h2><p>Traffic Rider is an immersive first-person motorcycle game that puts you directly on the seat of a high-speed bike. This game builds upon the endless racer genre by adding a full career mode, detailed graphics, and realistic motor sounds recorded from real bikes. You are not just dodging traffic; you are completing specific missions, like reaching a checkpoint in time or performing a certain number of overtakes. Traffic Rider Unblocked provides a console-level racing experience in your browser, capturing the intensity and risk of weaving through traffic at high speed.</p><h2>✨ Game Features Traffic Rider</h2><p>Traffic Rider boasts an impressive career mode with over 70 missions. As you play, you earn cash to unlock and upgrade 29 different motorcycles, from simple scooters to super-fast sport bikes. The game features day and night variations, adding to the visual appeal and challenge. The first-person camera view is the star feature, creating a true sense of speed and immersion. Unlike many racers, this game rewards skill; the faster you go and the closer your overtakes, the more points you score. Traffic Rider Unblocked is a polished and deep racing experience.</p<h3>Gameplay Tips</h3><ul><li>Close Overtakes: Overtaking cars at high speed gives you bonus score and cash.</li><li>Wheelies: Perform wheelies (by holding down/accelerating) for extra score, but be careful.</li><li>Two-Way Traffic: Driving in the oncoming lane in two-way mode gives the most points.</li><li>Upgrade Smart: Focus on speed, handling, and braking to make missions easier.</li></ul><h2>🕹️ How to Play Traffic Rider</h2><p>The controls in Traffic Rider are simple. Use W or Up Arrow to accelerate and S or Down Arrow to brake. A/D or Left/Right Arrows are for steering. The game is played from a first-person perspective, so you must judge the gaps between cars carefully. In career mode, you will select a mission and try to complete its objective, such as 'Overtake 30 cars' or 'Finish the race in 100 seconds'. Completing missions unlocks new stages and earns you cash. Use this cash in the garage to buy better bikes, making the harder levels in Traffic Rider Unblocked more achievable.</p>
             <div class="game-features">
@@ -529,7 +529,7 @@ class="category-tag-item" style="background-color: #00B8D4;">
                     <div class="game-card">
                         <a href="/catpad" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/catpad.png" alt="Catpad Music Creator">
+                                <img src="https://fafgamess.github.io/img/catpad.png" alt="Catpad Music Creator">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Catpad Music Creator</h3>
@@ -540,7 +540,7 @@ class="category-tag-item" style="background-color: #00B8D4;">
                     <div class="game-card">
                         <a href="/pop-it-master" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/pop-it-master.png" alt="Pop It Master The Ultimate Fidget Toy Game">
+                                <img src="https://fafgamess.github.io/img/pop-it-master.png" alt="Pop It Master The Ultimate Fidget Toy Game">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Pop It Master The Ultimate Fidget Toy Game</h3>
@@ -551,7 +551,7 @@ class="category-tag-item" style="background-color: #00B8D4;">
                     <div class="game-card">
                         <a href="/tricks" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/tricks.png" alt="Tricks">
+                                <img src="https://fafgamess.github.io/img/tricks.png" alt="Tricks">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Tricks</h3>
@@ -562,7 +562,7 @@ class="category-tag-item" style="background-color: #00B8D4;">
                     <div class="game-card">
                         <a href="/neon-war" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/neon-war.png" alt="Neon War Retro Space Shooter">
+                                <img src="https://fafgamess.github.io/img/neon-war.png" alt="Neon War Retro Space Shooter">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Neon War Retro Space Shooter</h3>
@@ -573,7 +573,7 @@ class="category-tag-item" style="background-color: #00B8D4;">
                     <div class="game-card">
                         <a href="/crazy-cars" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/crazy-cars.png" alt="Crazy Cars Stunt Driving Fun">
+                                <img src="https://fafgamess.github.io/img/crazy-cars.png" alt="Crazy Cars Stunt Driving Fun">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Crazy Cars Stunt Driving Fun</h3>
@@ -584,7 +584,7 @@ class="category-tag-item" style="background-color: #00B8D4;">
                     <div class="game-card">
                         <a href="/moto-x3m-spooky-land" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/moto-x3m-spooky-land.png" alt="Moto X3M Spooky Land Halloween">
+                                <img src="https://fafgamess.github.io/img/moto-x3m-spooky-land.png" alt="Moto X3M Spooky Land Halloween">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Moto X3M Spooky Land Halloween</h3>
@@ -595,7 +595,7 @@ class="category-tag-item" style="background-color: #00B8D4;">
                     <div class="game-card">
                         <a href="/monsters-wheels-special" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/monsters-wheels-special.png" alt="Monsters Wheels Special 2D Racing">
+                                <img src="https://fafgamess.github.io/img/monsters-wheels-special.png" alt="Monsters Wheels Special 2D Racing">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Monsters Wheels Special 2D Racing</h3>
@@ -606,7 +606,7 @@ class="category-tag-item" style="background-color: #00B8D4;">
                     <div class="game-card">
                         <a href="/soccer-skills-euro-cup" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/soccer-skills-euro-cup.png" alt="Soccer Skills Euro Cup Lead Your Nation To Glory">
+                                <img src="https://fafgamess.github.io/img/soccer-skills-euro-cup.png" alt="Soccer Skills Euro Cup Lead Your Nation To Glory">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Soccer Skills Euro Cup Lead Your Nation To Glory</h3>
@@ -617,7 +617,7 @@ class="category-tag-item" style="background-color: #00B8D4;">
                     <div class="game-card">
                         <a href="/blocky-cars" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/blocky-cars.png" alt="Blocky Cars Online Combat">
+                                <img src="https://fafgamess.github.io/img/blocky-cars.png" alt="Blocky Cars Online Combat">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Blocky Cars Online Combat</h3>
@@ -628,7 +628,7 @@ class="category-tag-item" style="background-color: #00B8D4;">
                     <div class="game-card">
                         <a href="/sniper-gun-shooting" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/sniper-gun-shooting.png" alt="Sniper Gun Shooting">
+                                <img src="https://fafgamess.github.io/img/sniper-gun-shooting.png" alt="Sniper Gun Shooting">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Sniper Gun Shooting</h3>
@@ -639,7 +639,7 @@ class="category-tag-item" style="background-color: #00B8D4;">
                     <div class="game-card">
                         <a href="/slope-2" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/slope-2.png" alt="Slope 2 The Modern 3D Ball Runner">
+                                <img src="https://fafgamess.github.io/img/slope-2.png" alt="Slope 2 The Modern 3D Ball Runner">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Slope 2 The Modern 3D Ball Runner</h3>
@@ -650,7 +650,7 @@ class="category-tag-item" style="background-color: #00B8D4;">
                     <div class="game-card">
                         <a href="/rio-rex" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/rio-rex.png" alt="Rio Rex">
+                                <img src="https://fafgamess.github.io/img/rio-rex.png" alt="Rio Rex">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Rio Rex</h3>
@@ -707,8 +707,8 @@ class="category-tag-item" style="background-color: #00B8D4;">
         <div class="container">
    <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Only Sz Games</h3>
-                    <p>Looking for your favorite Only Sz Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
+                    <h3>FAF Games</h3>
+                    <p>Looking for your favorite FAF Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly no downloads required.</p>
                     <div class="social-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -720,7 +720,7 @@ class="category-tag-item" style="background-color: #00B8D4;">
 
             <div class="footer-bottom">
                 <p>&copy;
-<span id="currentYear"></span> Only Sz Games. All rights reserved.</p>
+<span id="currentYear"></span> FAF Games. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="/privacy-policy">Privacy Policy</a>
                     <a href="/contact">Contact Us</a>
